samples/_failures_safe/1761284427_b77ccc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6803a11.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_d6803a11.c:180:35: error: missing terminating " character
  180 |         case TOKEN_STRING: return "
      |                                   ^
./samples/SAFE/__tmp_d6803a11.c:180:9: error: expected expression at end of input
  180 |         case TOKEN_STRING: return "
      |         ^~~~
./samples/SAFE/__tmp_d6803a11.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6803a11.c:180:9: error: expected declaration or statement at end of input
